--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -16,6 +16,9 @@
     .main-score-clear{
         border-radius: 0 0 5px 5px;
     }
+    .main-result{
+        margin-bottom: 30px;
+    }
 }
 
 @media only screen and (max-width: 400px){
